doc: java doc update